--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -1,39 +1,36 @@
 /* --- INTRO SECTION --- */
 
-#intro{
+#intro {
     padding-top: 32px;
-    height: 400px;
     margin: 0 auto;
-  }
-  
-  
-  .introLeft{
-    position: relative; 
+}
+
+.introLeft {
+    position: relative;
     flex: 1.2;
     height: 100%;
     background: #ffffff;
-    
-  }
-  
-  .introWrapper{
-    
+}
+
+.introWrapper {
     display: flex;
     padding: 0;
-    height: 100%;
+    margin-bottom: 30px;
+    height: 400px;
     border-radius: 10px;
     overflow: hidden;
-    -webkit-box-shadow: 10px 10px 27px -8px rgba(0,0,0,0.16); 
-    box-shadow: 10px 10px 27px -8px rgba(0,0,0,0.16);
-  }
-  
-  .centreIntro{
+    box-shadow: 10px 10px 27px -8px rgba(0, 0, 0, 0.16);
+    margin: 5px auto 20px;
+}
+
+.centreIntro {
     position: absolute;
     top: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
-  }
-  
-  #name{
+}
+
+#name {
     margin-left: 15px;
     font-size: 64px;
     font-weight: 800;
@@ -41,10 +38,9 @@
     color: var(--color-primary);
     letter-spacing: -2px;
     font-family: Impact;
-  }
-  
-  
-  #title{
+}
+
+#title {
     padding-left: 10px;
     padding-top: 5px;
     letter-spacing: 4px;
@@ -52,99 +48,101 @@
     font-size: 15px;
     margin-left: 15px;
     margin-bottom: 16px;
-  }
+}
 
-  .bannerIcon{
-    font-size:32px;
+.bannerIcon {
+    font-size: 32px;
     color: var(--color-secondary);
     margin-left: 27px;
     cursor: pointer;
     transform: scale(1);
-    transition: all .3s ease-in-out, box-shadow .3s ease-in-out;
-  }
+    transition: all 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
 
-  .bannerIcon:hover{
+.bannerIcon:hover {
     color: var(--color-primary);
-  }
-  
-  .introRight{
+}
+
+.introRight {
     flex: 1;
     height: 100%;
-    background: rgb(56,56,56);
-    background: linear-gradient(231deg, rgba(56,56,56,1) 0%, rgba(112,112,112,1) 41%, rgba(250,254,255,1) 95%); 
+    background: rgb(56, 56, 56);
+    background: linear-gradient(
+        231deg,
+        rgba(56, 56, 56, 1) 0%,
+        rgba(112, 112, 112, 1) 41%,
+        rgba(250, 254, 255, 1) 95%
+    );
     background-image: url(../images/IR35.jpeg);
     background-size: cover;
-    
-  }
-  
-  
-  /* --- ABOUT SECTION --- */
+}
 
-  #about{
-    margin-top: 80px;
-  }
+/* --- ABOUT SECTION --- */
 
-  .border{
-    background-color: var(--color-primary);
+#about {
+    margin-top: 40px;
+}
+
+.border {
+    /* background-color: var(--color-primary); */
     width: 100%;
     height: 15px;
     position: absolute;
     top: 0;
-  }
-  
-  .aboutBg{
+}
+
+.aboutBg {
     background-color: white;
     height: 100%;
+    width: 100%;
     border-radius: 10px 10px 0 0;
     padding: 100px 0;
     position: relative;
     overflow: hidden;
-  }
-  
-  #aboutText{
-    margin: 32px 32px 0px;
+}
+
+#aboutText {
+    margin: 32px 50px 0px;
     text-align: center;
     font-size: 21px;
     font-weight: 200;
-  }
-  
-  #aboutIcons{
+}
+
+#aboutIcons {
     margin-top: 32px;
     width: 100%;
     text-align: center;
     line-height: 67px;
-  }
-  
-  .aboutBtn {
+}
+
+.aboutBtn {
     box-shadow: inset 0 0 0 0 var(--color-secondary);
     color: white;
     background-color: var(--color-secondary);
     margin: 0.6rem -1.25rem;
     padding: 0.6rem 1.25rem;
-    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+    transition: all 0.2s ease-in-out;
     font-weight: 500;
-    border: 3px solid var(--color-secondary);
-  }
-  
-  .aboutBtn:hover {
-    box-shadow: inset 150px 0 0 0 var(--color-z);
-    color: black;
-  }
-  
-  .icon{
+}
+
+.aboutBtn:hover {
+    transform: scale(1.1);
+}
+
+.icon {
     color: #787878;
     margin: 0 10px;
     padding: 20px;
     font-size: 32px;
     cursor: default;
-  }
-  
-  #aboutBtns{
+}
+
+#aboutBtns {
     text-align: center;
     margin-top: 6px;
-  }
-  
-  #btnSeperator{
+}
+
+#btnSeperator {
     height: 40px;
     width: 2px;
     background: rgba(0, 0, 0, 0.3);
@@ -152,43 +150,38 @@
     position: relative;
     top: 12px;
     margin: 0 40px;
-  }
+}
 
+/* ---MEDIA QUERIES--- */
 
-  /* ---MEDIA QUERIES--- */
-
-
-@media  screen and (max-width: 970px ) {
-  
-    #intro{
-      padding-top: 0;
-      width: 90% !important;
-      height: 600px;
+@media screen and (max-width: 970px) {
+    #intro {
+        padding-top: 72px;
+        height: fit-content;
     }
 
-    .introWrapper{
-      border-radius: 0;
-      flex-direction: column-reverse;
+    .introWrapper {
+        flex-direction: column-reverse;
+        width: 95%;
     }
 
-    .introLeft{
-      flex: 3;
+    .introLeft {
+        flex: 3;
     }
 
-    .introRight{
-      flex: 4;
+    .introRight {
+        flex: 4;
     }
 
-    #aboutPrompt{
-      margin: 128px 13px 0;
+    #aboutPrompt {
+        margin: 128px 13px 0;
     }
 }
 
 @media screen and (max-width: 458px) {
-
-  #name{
-    font-size: 48px;
-    line-height: 48px;
-    margin-bottom: 10px;
-  }
+    #name {
+        font-size: 48px;
+        line-height: 48px;
+        margin-bottom: 10px;
+    }
 }
