--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,70 +1,108 @@
 /* --- PROJECTS SECTION --- */
 
-#projects{
+#projects {
     position: relative;
     bottom: 20px;
 }
-.projectWrapper{
+.projectWrapper,
+.projectWrapperLeft {
+    background-color: rgb(231, 231, 231);
+    padding: 10px 0 0px 0px;
     width: 80%;
     height: auto;
     margin: 0 auto;
-    display: grid;
-    grid-template-columns: 3fr 1fr;
+    display: flex;
     margin-bottom: 100px;
     position: relative;
+    text-align: center;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 10px 10px 27px -8px rgba(0, 0, 0, 0.16);
+    transition: all 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
-.wrapper2{
-    grid-template-columns: 3fr 1fr;
+.projectWrapper {
+    grid-template-columns: 75% 1fr;
 }
 
-#projectsPrompt{
-    margin-top: 42px;
-    margin-bottom: 150px;
+.projectWrapperLeft {
+    grid-template-columns: 25% 1fr;
+}
+
+.projectInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 30%;
+    background-color: rgb(231, 231, 231);
+    text-align: center;
+    color: rgb(65, 65, 65);
+}
+
+.projectInfo .icon {
+    color: rgb(65, 65, 65);
+    padding: 0;
+}
+
+.projectDetails {
+    margin: 10px 22px 0px;
+}
+
+.techStack {
+    margin-top: 16px;
+}
+
+.projectBtn {
+    margin-top: 12px;
+}
+
+#projectsPrompt {
+    margin-bottom: 100px;
     color: black;
 }
 
-
-.deskView{
-    border-radius: 10px ;
-    width: 100%;
-    -webkit-box-shadow: 10px 10px 27px -8px rgba(0,0,0,0.16); 
-    box-shadow: 10px 10px 27px -8px rgba(0,0,0,0.16);
-    transition: all .3s ease-in-out, box-shadow .3s ease-in-out;
-    position: relative;
-    
+.projectImgContainer {
+    width: 70%;
 }
 
+.deskView {
+    border-radius: 10px;
+    width: 100%;
+    position: relative;
+}
 
 .mobView {
     border-radius: 10px;
     width: 100%;
-    box-shadow: 10px 10px 27px -8px rgba(0,0,0,0.16);
+    box-shadow: 10px 10px 27px -8px rgba(0, 0, 0, 0.16);
     position: relative;
     bottom: 50px;
     left: 20px;
     z-index: 10;
-    transition: all .3s ease-in-out, box-shadow .3s ease-in-out;
+    transition: all 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
-
-
-.deskView:hover, .mobView:hover{
-    transform: scale(1.03);
-}
-
 
 /* MEDIA QUERIES */
 
-@media screen and (max-width: 1450px) {
-
-    .projectWrapper{
-        grid-template-columns: 1fr;
+@media screen and (max-width: 1300px) {
+    .projectWrapper {
+        flex-direction: column;
+        width: 90%;
         margin-bottom: 50px;
+        padding: 0;
     }
 
-    .mobView{
-        display: none;
+    .projectImgContainer,
+    .projectInfo {
+        width: 100%;
     }
-    
+
+    .projectInfo {
+        padding: 30px 0px;
+    }
+
+    .projectDetails {
+        width: 80%;
+        margin: 20px auto;
+    }
 }
-
