--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -176,6 +176,10 @@
     #aboutPrompt {
         margin: 128px 13px 0;
     }
+
+    #aboutText {
+        font-size: 1rem;
+    }
 }
 
 @media screen and (max-width: 458px) {
