--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -23,6 +23,10 @@
 }
 
 @media screen and (max-width: 970px) {
+    #contact {
+        margin-top: 0;
+    }
+
     #contactFollowUp {
         font-size: 1rem;
         margin: 30px 22px;
