--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -184,7 +184,11 @@
     #aboutIcons {
         margin: 0 auto;
         width: 80%;
-        line-height: 60px;
+        line-height: 25px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-row-gap: 0px;
+        grid-column-gap: 0px;
     }
 }
 
