--- a/src/App.css
+++ b/src/App.css
@@ -170,6 +170,7 @@ button,
         font-size: 1rem;
         text-decoration: none;
         font-family: impact;
+        text-transform: uppercase;
     }
 
     #scrollTopBtn {
