--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -185,7 +185,7 @@
     }
 
     #aboutIcons {
-        margin: 0 auto;
+        margin: 24px auto;
         width: 80%;
         line-height: 25px;
         display: grid;
