--- a/src/styles/experience.css
+++ b/src/styles/experience.css
@@ -35,14 +35,17 @@
 }
 
 #timelineEnd {
-    color: white;
+    background-color: white;
+    color: var(--color-secondary);
     padding: 0;
     margin: 0;
     font-size: 32px;
     text-align: center;
     position: absolute;
+    border: 2px white solid;
+    border-radius: 50%;
     left: 50%;
-    bottom: -40px;
+    bottom: -30px;
     transform: translateX(-50%);
     z-index: 9;
     transition: all 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
