Changed experience section

--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap");
 
 * {
-    padding: 0;
-    margin: 0;
+	padding: 0;
+	margin: 0;
 }
 
 :root {
-    --color-bg: #fafafa;
-    --color-bg-alt: #e9e9e9;
-    --color-primary: #01091e;
-    --color-secondary: #bb167c;
+	--color-bg: #fafafa;
+	--color-bg-alt: #e9e9e9;
+	--color-primary: #01091e;
+	--color-secondary: #bb167c;
 
-    scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 
 /* ::-webkit-scrollbar{
@@ -24,167 +24,175 @@
  */
 
 body {
-    /* background: var(--color-bg); */
-    background: rgb(222, 222, 222);
-    background: linear-gradient(
-        90deg,
-        rgba(222, 222, 222, 1) 0%,
-        rgba(255, 255, 255, 1) 40%,
-        rgba(221, 221, 221, 1) 100%
-    );
-    background-image: url("images/background.jpg");
+	/* background: var(--color-bg); */
+	background: rgb(222, 222, 222);
+	background: linear-gradient(
+		90deg,
+		rgba(222, 222, 222, 1) 0%,
+		rgba(255, 255, 255, 1) 40%,
+		rgba(221, 221, 221, 1) 100%
+	);
+	background-image: url("images/background.jpg");
 }
 
 nav {
-    position: fixed;
-    bottom: 50%;
-    transform: translateY(50%);
-    left: 0;
-    z-index: 10;
-    background: rgba(0, 0, 0, 0.3);
-    background: white;
-    padding: 11px 10px;
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    backdrop-filter: blur(15px);
-    -webkit-box-shadow: 10px 10px 27px -8px rgba(0, 0, 0, 0.16);
-    box-shadow: 10px 10px 27px -8px rgba(0, 0, 0, 0.16);
+	position: fixed;
+	bottom: 50%;
+	transform: translateY(50%);
+	left: 0;
+	z-index: 10;
+	background: rgba(0, 0, 0, 0.3);
+	background: white;
+	padding: 11px 10px;
+	border-radius: 15px;
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+	backdrop-filter: blur(15px);
+	-webkit-box-shadow: 10px 10px 27px -8px rgba(0, 0, 0, 0.16);
+	box-shadow: 10px 10px 27px -8px rgba(0, 0, 0, 0.16);
 }
 
 nav a {
-    font-size: 1.2rem;
-    color: var(--color-primary);
-    padding: 0.4rem 1.2rem;
-    border-radius: 7px;
-    background-color: none;
-    width: 33%;
-    transition: all 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-    align-self: center;
-    text-decoration: none;
-    font-family: impact;
+	font-size: 1.2rem;
+	color: var(--color-primary);
+	padding: 0.4rem 1.2rem;
+	border-radius: 7px;
+	background-color: none;
+	width: 33%;
+	transition: all 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+	align-self: center;
+	text-decoration: none;
+	font-family: impact;
 }
 
 nav a:hover {
-    background-color: var(--color-secondary);
-    color: white;
+	background-color: var(--color-secondary);
+	color: white;
 }
 
 nav a.active {
-    background: rgba(0, 0, 0, 0.5);
-    background: var(--color-primary);
-    color: var(--color-bg);
+	background: rgba(0, 0, 0, 0.5);
+	background: var(--color-primary);
+	color: var(--color-bg);
 }
 
 button,
 .projectBtn {
-    background: none;
-    border: none;
-    border-radius: 6px;
-    padding: 10px;
-    margin: 0 10px;
-    color: var(--color-secondary);
-    font-weight: bold;
-    font-size: 16px;
-    cursor: pointer;
-    text-decoration: none;
+	background: none;
+	border: none;
+	border-radius: 6px;
+	padding: 10px;
+	margin: 0 10px;
+	color: var(--color-secondary);
+	font-weight: bold;
+	font-size: 16px;
+	cursor: pointer;
+	text-decoration: none;
 }
 
 #progressBar {
-    position: fixed;
-    top: 0;
-    z-index: 20;
-    height: 7px;
-    background-color: var(--color-secondary);
-    border-radius: 0px 2px 2px 0px;
-    padding-right: 2px;
+	position: fixed;
+	top: 0;
+	z-index: 20;
+	height: 7px;
+	background-color: var(--color-secondary);
+	border-radius: 0px 2px 2px 0px;
+	padding-right: 2px;
 }
 
 #scrollTopBtn {
-    color: var(--color-secondary);
-    padding: 0;
-    margin: 0;
-    font-size: 44px;
-    text-align: center;
-    position: fixed;
-    bottom: 10px;
-    right: 20px;
-    transform: translateX(-50%);
-    z-index: 9;
-    transition: all 0.1s ease-in-out;
+	color: var(--color-secondary);
+	padding: 0;
+	margin: 0;
+	font-size: 44px;
+	text-align: center;
+	position: fixed;
+	bottom: 10px;
+	right: 20px;
+	transform: translateX(-50%);
+	z-index: 9;
+	transition: all 0.1s ease-in-out;
 }
 
 #scrollTopBtn:hover {
-    font-size: 48px;
+	font-size: 48px;
 }
 
 .sectionContainer {
-    width: 70%;
-    height: auto;
-    margin: 0 auto;
+	width: 70%;
+	height: auto;
+	margin: 0 auto;
 }
 
-.heading {
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: normal;
-    font-size: 24px;
-    letter-spacing: -1px;
+.heading,
+.subHeading {
+	text-align: center;
+	text-transform: uppercase;
+	font-weight: normal;
+	font-size: 24px;
+	letter-spacing: -1px;
 }
 
 .keyword {
-    font-weight: 500;
-    text-decoration: underline;
+	font-weight: 700;
+}
+
+.subHeading {
+    margin-top: 60px;
+	font-size: 20px;
+	letter-spacing: 0px;
+	font-weight: 600;
+	text-align: center;
 }
 
 /* --- MEDIA QUERIES --- */
 
 @media screen and (max-width: 970px) {
-    .sectionContainer {
-        width: 100%;
-    }
+	.sectionContainer {
+		width: 100%;
+	}
 
-    nav a {
-        width: auto;
-    }
+	nav a {
+		width: auto;
+	}
 }
 
 @media screen and (max-width: 970px) {
-    nav {
-        top: 0;
-        transform: translateY(0);
-        justify-content: center;
-        flex-direction: row;
-        width: 100%;
-        height: 40px;
-        border-radius: 0;
-        display: flex;
-        justify-content: space-around;
-        gap: 0;
-        padding: 11px 0;
-    }
+	nav {
+		top: 0;
+		transform: translateY(0);
+		justify-content: center;
+		flex-direction: row;
+		width: 100%;
+		height: 40px;
+		border-radius: 0;
+		display: flex;
+		justify-content: space-around;
+		gap: 0;
+		padding: 11px 0;
+	}
 
-    nav a {
-        align-self: center;
-        font-size: 0.9rem;
-        text-decoration: none;
-        font-family: monospace;
-        text-transform: uppercase;
-    }
+	nav a {
+		align-self: center;
+		font-size: 0.9rem;
+		text-decoration: none;
+		font-family: monospace;
+		text-transform: uppercase;
+	}
 
-    #scrollTopBtn {
-        right: -7px;
-        font-size: 36px;
-    }
+	#scrollTopBtn {
+		right: -7px;
+		font-size: 36px;
+	}
 }
 
 @media screen and (max-width: 600px) {
-    .heading {
-        font-size: 18px;
-    }
+	.heading {
+		font-size: 18px;
+	}
 
-    #scrollTopBtn {
-        display: none;
-    }
+	#scrollTopBtn {
+		display: none;
+	}
 }
