--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -1,206 +1,218 @@
 /* --- INTRO SECTION --- */
 
 #intro {
-    padding-top: 32px;
-    margin: 0 auto;
+	padding-top: 32px;
+	margin: 0 auto;
 }
 
 .introLeft {
-    position: relative;
-    flex: 1.2;
-    height: 100%;
-    background: #ffffff;
+	position: relative;
+	flex: 1.2;
+	height: 100%;
+	background: #ffffff;
 }
 
 .introWrapper {
-    display: flex;
-    padding: 0;
-    margin-bottom: 30px;
-    height: 400px;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 10px 10px 27px -8px rgba(0, 0, 0, 0.16);
-    margin: 5px auto 20px;
+	display: flex;
+	padding: 0;
+	margin-bottom: 30px;
+	height: 400px;
+	border-radius: 10px;
+	overflow: hidden;
+	box-shadow: 10px 10px 27px -8px rgba(0, 0, 0, 0.16);
+	margin: 5px auto 20px;
 }
 
 .centreIntro {
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+	position: absolute;
+	top: 50%;
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
 }
 
 #name {
-    margin-left: 15px;
-    padding-right: 10px;
-    font-size: 64px;
-    font-weight: 800;
-    text-transform: uppercase;
-    color: var(--color-primary);
-    letter-spacing: -2px;
-    font-family: Impact;
+	margin-left: 15px;
+	padding-right: 10px;
+	font-size: 64px;
+	font-weight: 800;
+	text-transform: uppercase;
+	color: var(--color-primary);
+	letter-spacing: -2px;
+	font-family: Impact;
 }
 
 #title {
-    padding-left: 10px;
-    padding-top: 5px;
-    letter-spacing: 4px;
-    text-transform: uppercase;
-    font-size: 15px;
-    margin-left: 15px;
-    margin-bottom: 16px;
+	padding-left: 10px;
+	padding-top: 5px;
+	letter-spacing: 4px;
+	text-transform: uppercase;
+	font-size: 15px;
+	margin-left: 15px;
+	margin-bottom: 16px;
 }
 
 .bannerIcon {
-    font-size: 32px;
-    color: var(--color-secondary);
-    margin-left: 27px;
-    cursor: pointer;
-    transform: scale(1);
-    transition: all 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+	font-size: 32px;
+	color: var(--color-secondary);
+	margin-left: 27px;
+	cursor: pointer;
+	transform: scale(1);
+	transition: all 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 .bannerIcon:hover {
-    color: var(--color-primary);
+	color: var(--color-primary);
 }
 
 .introRight {
-    flex: 1;
-    height: 100%;
-    background: rgb(56, 56, 56);
-    background: linear-gradient(
-        231deg,
-        rgba(56, 56, 56, 1) 0%,
-        rgba(112, 112, 112, 1) 41%,
-        rgba(250, 254, 255, 1) 95%
-    );
-    background-image: url(../images/IR35.jpeg);
-    background-size: cover;
-    background-position-y: center;
+	flex: 1;
+	height: 100%;
+	background: rgb(56, 56, 56);
+	background: linear-gradient(
+		231deg,
+		rgba(56, 56, 56, 1) 0%,
+		rgba(112, 112, 112, 1) 41%,
+		rgba(250, 254, 255, 1) 95%
+	);
+	background-image: url(../images/IMG_0367.jpeg);
+	background-size: cover;
+	background-position-y: center;
+	background-position-x: center;
 }
 
 /* --- ABOUT SECTION --- */
 
 #about {
-    margin-top: 40px;
+	margin-top: 40px;
 }
 
 .border {
-    /* background-color: var(--color-primary); */
-    width: 100%;
-    height: 15px;
-    position: absolute;
-    top: 0;
+	/* background-color: var(--color-primary); */
+	width: 100%;
+	height: 15px;
+	position: absolute;
+	top: 0;
 }
 
 .aboutBg {
-    background-color: white;
-    height: 100%;
-    width: 100%;
-    border-radius: 10px 10px 0 0;
-    padding: 100px 0;
-    position: relative;
-    overflow: hidden;
+	background-color: white;
+	height: 100%;
+	width: 100%;
+	border-radius: 10px 10px 0 0;
+	padding: 100px 0;
+	position: relative;
+	overflow: hidden;
 }
 
 #aboutText {
-    margin: 32px 50px 0px;
-    text-align: center;
-    font-size: 18px;
-    font-weight: 200;
+	margin: 32px 60px 0px;
+	text-align: center;
+	font-size: 18px;
+	font-weight: 200;
 }
 
-#aboutIcons {
-    margin-top: 32px;
-    width: 100%;
-    text-align: center;
-    line-height: 67px;
+.aboutIcons {
+	margin-top: 32px;
+	width: 100%;
+	text-align: center;
+	line-height: 67px;
 }
 
 #aboutIcons .icon {
-    margin: 0;
+	margin: 0;
 }
+
 .aboutBtn {
-    box-shadow: inset 0 0 0 0 var(--color-secondary);
-    color: white;
-    background-color: var(--color-secondary);
-    margin: 0.6rem -1.25rem;
-    padding: 0.6rem 1.25rem;
-    transition: all 0.2s ease-in-out;
-    font-weight: 500;
+	box-shadow: inset 0 0 0 0 var(--color-secondary);
+	color: white;
+	background-color: var(--color-secondary);
+	margin: 0.6rem -1.25rem;
+	padding: 0.6rem 1.25rem;
+	transition: all 0.2s ease-in-out;
+	font-weight: 500;
 }
 
 .aboutBtn:hover {
-    transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 .icon {
-    color: #787878;
-    margin: 0 10px;
-    padding: 20px;
-    font-size: 32px;
-    cursor: default;
+	color: #787878;
+	margin: 0 10px;
+	padding: 20px;
+	font-size: 32px;
+	cursor: default;
+}
+
+.certIcon {
+	width: 100px;
+	margin: 0px 16px;
 }
 
 #aboutBtns {
-    text-align: center;
-    margin-top: 6px;
+	text-align: center;
+	margin-top: 6px;
 }
 
 #btnSeperator {
-    height: 40px;
-    width: 2px;
-    background: rgba(0, 0, 0, 0.3);
-    display: inline-block;
-    position: relative;
-    top: 12px;
-    margin: 0 40px;
+	height: 40px;
+	width: 2px;
+	background: rgba(0, 0, 0, 0.3);
+	display: inline-block;
+	position: relative;
+	top: 12px;
+	margin: 0 40px;
 }
 
 /* ---MEDIA QUERIES--- */
 
 @media screen and (max-width: 970px) {
-    #intro {
-        padding-top: 72px;
-        height: fit-content;
-    }
+	#intro {
+		padding-top: 72px;
+		height: fit-content;
+	}
 
-    .introWrapper {
-        flex-direction: column-reverse;
-        width: 95%;
-    }
+	.introWrapper {
+		flex-direction: column-reverse;
+		width: 95%;
+		height: 1000px;
+	}
 
-    .introLeft {
-        flex: 3;
-    }
+	.introLeft {
+		flex: 1.5;
+	}
 
-    .introRight {
-        flex: 4;
-    }
+	.introRight {
+		flex: 4;
+	}
 
-    #aboutPrompt {
-        margin: 128px 13px 0;
-    }
+	#aboutPrompt {
+		margin: 128px 13px 0;
+	}
 
-    #aboutText {
-        font-size: 1rem;
-    }
+	#aboutText {
+		font-size: 1rem;
+	}
 
-    #aboutIcons {
-        margin: 24px auto;
-        width: 80%;
-        line-height: 25px;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-row-gap: 0px;
-        grid-column-gap: 0px;
-    }
+	#aboutIcons {
+		margin: 24px auto;
+		width: 80%;
+		line-height: 25px;
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+		grid-row-gap: 0px;
+		grid-column-gap: 0px;
+	}
 }
 
 @media screen and (max-width: 458px) {
-    #name {
-        font-size: 48px;
-        line-height: 48px;
-        margin-bottom: 10px;
-    }
+	#name {
+		font-size: 48px;
+		line-height: 48px;
+		margin-bottom: 10px;
+	}
+
+	.introRight {
+		background-position-y: bottom;
+	}
 }
